2005-01-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/paper-outputter-scheme.cc (LY_DEFINE):
	ly:outputter-port. New function.

	* scm/framework-ps.scm (output-classic-framework): dump a
	-systems.texi too
	(output-classic-framework): dump multiple systems on an "infinite"
	page EPS including fonts. 

	* scripts/lilypond-book.py (Lilypond_snippet.ly_is_outdated): use
	.eps files for both texi and tex formats. Use PNG coming from
	lilypond.
	
2005-01-28  Graham Percival  <gperlist@shaw.ca>

	* Docuemntation/user/invoking.itely: fix info about -o=FILE.

	* scripts/lilypond-latex.py: fix info about -o=FILE.

2005-01-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/generate-embedded-cff.ly: write .cff.ps files.

	* mf/GNUmakefile ($(outdir)/lilypond.map): add .cff.ps to .map file.

	* stepmake/stepmake/metafont-rules.make ($(outdir)/%.pfb
	$(outdir)/%.svg $(outdir)/%.pfa): remove --simplify

2005-01-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/include/guile-compatibility.hh (SCM_VECTOR_P): Compile fix.

2005-01-28  Werner Lemberg  <wl@gnu.org>

	* mf/feta-macros.mf (soft_start_penstroke, soft_end_penstroke): New
	macros.
	(draw_bulb): Improved.

	* mf/feta-pendaal.mf ("Pedal asterisk"): Remove workaround for
	metapost bug.
	(draw_pedal_P): Use soft_end_penstroke.
	(draw_pedal_d): Use soft_start_penstroke.

	* mf/feta-schrift.mf ("Trill (`tr')"): Remove redundant point in
	path.
	("Varied Coda"): Move some points to avoid fontforge warnings.  This
	doesn't change the glyph shape.

	* mf/feta-accordion.mf ("accOldEE"): Draw glyph differently (without
	changing the shape) to avoid fontforge warnings.

	* mf/feta-klef.mf (draw_tab_T, draw_tab_A, draw_tab_B): Use
	soft_end_penstroke and fix glyph shape.

2005-01-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/*.cc: Scheme deprecation of SCM_VECTOR_* 

2005-01-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-markup-commands.scm (line): filter out empty stencils
	from line command.
